--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,10 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'realm-android'
 android {
     compileSdkVersion 26
     buildToolsVersion "27.0.3"
     defaultConfig {
-
+        manifestPlaceholders = [auth0Domain:"@string/com_auth0_domain", auth0Scheme: "https"]
         multiDexEnabled true
         applicationId "com.mark1.flamingo"
         minSdkVersion 19
@@ -36,14 +36,22 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    sourceSets { main { res.srcDirs = ['src/main/res', 'src/main/res/drawable-xxhdpi'] } }
+    sourceSets { main {
+        res.srcDirs = ['src/main/res', 'src/main/res/drawable-xxhdpi']
+        assets.srcDirs = ['src/main/assets','src/main/assets/' ]
+    } }
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile "io.realm:android-adapters:2.0.0"
+    compile "com.auth0.android:auth0:1.12.0"
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile 'com.mindorks:placeholderview:0.7.1'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.google.code.gson:gson:2.7'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.google.guava:guava:23.3-android'
     compile 'com.android.support:cardview-v7:26.0.0'
